20201224 documentation 정의
