# src/api/ad-store/index.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const router = express.Router();
+
+/**
+ * 소유한 가게를 조회
+ * 관리자 로그인 필요
+ */
+router.get('/')
+
+module.exports = router;
