# src/api/auth/index.js
@@ -3,20 +3,29 @@ const router = express.Router();
 const { Login, Logout, Auth, Test, TestCM } = require('./auth.ctrl');
 const AuthCheckForJwt = require('../../middleware/authForJwt')
 
-router.get('/', (req, res) => {
-    res.status(200).json({
-        data: 'testpage'
-    })
-});
-
+/**
+ * 로그인
+ */
 router.post('/login', Login);
 
+/**
+ * 로그인 (관리자)
+ */
+router.post('/ad-login');
+
+/**
+ * 로그아웃
+ */
 router.get('/logout', AuthCheckForJwt, Logout);
 
+/**
+ * 로그인 인증
+ */
 router.post('/auth', AuthCheckForJwt, Auth);
 
-router.post('/test', Test);
 
+/**테스트코드 삭제할것 */
+router.post('/test', Test);
 router.get('/testcm', AuthCheckForJwt, TestCM)
 
 module.exports = router;
