# src/api/reserve/index.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const router = express.Router();
+
+
+/**
+ * 가게 예약 현황
+ */
+router.get('/:storeid');
+
+module.exports = router;
